# mediapipe-wasinn-demo

./: Cargo.toml  README.md
.github/workflows/: main.yaml
examples/: face_detection.rs
scripts/: env.sh  wasmedge-init.sh  wasmedge-runner.sh
src/: lib.rs
src/inference/: inference_error.rs  inference_graph.rs  inference_tensor.rs  mod.rs
src/postprocess/: detection.rs  draw_utils.rs  mod.rs  ssd_anchors_generator.rs
src/postprocess/ops/: mod.rs  sigmoid.rs  softmax.rs
src/preprocess/: image_process.rs  mod.rs
src/solutions/: face_detection.rs  mod.rs
tests/: test_inference.rs
