[package]
name = "mediapipe-wasinn-demo"
version = "0.1.0-dev"
edition = "2021"
authors = ["bo.yang@smail.nju.edu.cn"]
license = "Apache-2.0"
categories = ["wasm", "computer-vision"]
keywords = ["webassembly", "wasm", "neural-network"]
readme = "README.md"
repository = "https://github.com/yanghaku/mediapipe-wasinn-demo"
description = "A Rust library crate for mediapipe models for WasmEdge NN"
exclude = [
    "examples",
    "tests",
    "scripts",
]


[dependencies]
wasi-nn = "0.2"
image = { version = "^0.24", default-features = false, features = ["jpeg", "png", "gif"] }


[[example]]
name = "face_detection"
path = "examples/face_detection.rs"
